--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>PERRO ESPECIAL</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">Salchicha americana Zenú, pan artesanal, cebolla caramelizada, tocinito, queso y papa ripio.</p>
+                            <p class="descripcion">Salchicha americana Zenú, pan artesanal, cebolla caramelizada, tocinito, queso, papa ripio y salsas.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>NACHOS</span><span class="puntos"></span><span class="precio">$23.000</span></div>
@@ -65,15 +65,15 @@
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>PECHUGA A LA PLANCHA</span><span class="puntos"></span><span class="precio">$21.000</span></div>
-                            <p class="descripcion">250 grs de pechuga asada a la plancha acompañado de ensalada y papa francesa.</p>
+                            <p class="descripcion">250 grs de pechuga asada a la plancha, ensalada y papa francesa.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>PECHUGA HAWAIIANA</span><span class="puntos"></span><span class="precio">$23.000</span></div>
                             <p class="descripcion">250 grs de pechuga con tocinetas, queso y piña, ensalada y papa francesa.</p>
                         </article>
                         <article class="plato">
-                            <div class="header-item"><span>ALAS BBQ (5 Unid)</span><span class="puntos"></span><span class="precio">$20.000</span></div>
-                            <p class="descripcion">Alas de pollo sazonadas en salsa BBQ, ensalada y papa francesa.</p>
+                            <div class="header-item"><span>ALAS BBQ</span><span class="puntos"></span><span class="precio">$20.000</span></div>
+                            <p class="descripcion">Cinco alas sazonadas en salsa BBQ, ensalada y papa francesa.</p>
                         </article>
                     </section>
 
@@ -85,8 +85,19 @@
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>ROLLS DE CHURRASCO</span><span class="puntos"></span><span class="precio">$32.000</span></div>
-                            <p class="descripcion">Rolls de 300 grs rellenos de tocinito y queso parmesano, ensalada y papa.</p>
+                            <p class="descripcion">300 grs rellenos de tocinito y queso parmesano, ensalada y papa.</p>
                         </article>
+                        <article class="plato">
+                            <div class="header-item"><span>BIFF CHORIZO</span><span class="puntos"></span><span class="precio">$31.000</span></div>
+                            <p class="descripcion">250 grs de carne de res magra, jugosa asada a la plancha, ensalada y papa.</p>
+                        </article>
+                    </section>
+
+                    <section class="categoria">
+                        <h2 class="etiqueta-negra">ADICIONALES</h2>
+                        <div class="item-simple"><span>CARNE HAMBURGUESA</span><b>$7.000</b></div>
+                        <div class="item-simple"><span>PAPA FRANCESA / CRIOLLA</span><b>$5.000</b></div>
+                        <div class="item-simple"><span>ARROZ / PATACONES</span><b>$4.000</b></div>
                     </section>
                 </div>
 
@@ -95,46 +106,72 @@
                         <h2 class="etiqueta-negra">HAMBURGUESAS</h2>
                         <article class="plato">
                             <div class="header-item"><span>SENCILLA</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">100 grs res, pan artesanal, queso cheddar, lechuga, cebolla caramelizada y tomate.</p>
+                            <p class="descripcion">100g res, pan artesanal, queso cheddar, cebolla caramelizada y vegetales.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>POLLO SESAMO</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">125 grs pollo, pan artesanal, queso doble crema, tocinitela y vegetales.</p>
+                            <p class="descripcion">125g pollo, queso doble crema, tocinitela y vegetales.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>SESAMO (Doble)</span><span class="puntos"></span><span class="precio">$24.000</span></div>
-                            <p class="descripcion">Doble carne res y pollo con chorizo, cheddar, doble crema y vegetales.</p>
+                            <p class="descripcion">Res (100g), Pollo (120g), chorizo santarrosano, cheddar y doble crema.</p>
+                        </article>
+                        <article class="plato">
+                            <div class="header-item"><span>SESAMO MIX</span><span class="puntos"></span><span class="precio">$22.000</span></div>
+                            <p class="descripcion">Res (100g), Cerdo (100g), queso cheddar, tocinitela y vegetales.</p>
                         </article>
                     </section>
 
                     <div class="combo-negro">
-                        <h3>¡ARMA TU COMBO! 🍟🥤</h3>
-                        <p>Pídelas en combo por solo <strong>$6.000 adicionales</strong>.</p>
-                        <p>Incluye bebida de 250ml y porción de papa a su gusto.</p>
+                        <h3>¡ARMA TU COMBO! 🍟</h3>
+                        <p>Por solo <strong>$6.000 adicionales</strong>.</p>
+                        <p>Bebida 250ml + Papa a tu gusto.</p>
                     </div>
 
                     <section class="categoria">
-                        <h2 class="etiqueta-negra">BEBIDAS</h2>
-                        <div class="item-simple"><span>GASEOSA 250ML</span><b>$3.000</b></div>
-                        <div class="item-simple"><span>CERVEZA NACIONAL</span><b>$6.000</b></div>
-                        <div class="item-simple"><span>STELLA ARTOIS</span><b>$7.000</b></div>
-                        <div class="item-simple"><span>MICHELADA</span><b>$8.000</b></div>
+                        <h2 class="etiqueta-negra">BEBIDAS FRÍAS</h2>
+                        <div class="item-simple"><span>GASEOSA 250ML / 400ML</span><b>$3k / $4k</b></div>
+                        <div class="item-simple"><span>CERVEZA NACIONAL / CORONITA</span><b>$6k / $5k</b></div>
+                        <div class="item-simple"><span>STELLA / CORONA / COLA&POLA</span><b>$7k / $7k / $5k</b></div>
+                        <div class="item-simple"><span>AGUA CON/SIN GAS</span><b>$3.5 / $3.0</b></div>
+                        <div class="item-simple"><span>MICHELADA / SODA LIMÓN</span><b>$8k / $6k</b></div>
                     </section>
                 </div>
             </div>
 
+            <section class="categoria" style="margin-top: 40px;">
+                <h2 class="etiqueta-negra">JUGOS NATURALES</h2>
+                <div style="overflow-x: auto;">
+                    <table style="width: 100%; border-collapse: collapse; font-family: var(--fuente-vintage); font-size: 0.9rem; text-align: left;">
+                        <thead>
+                            <tr style="border-bottom: 2px solid var(--negro-solido);">
+                                <th style="padding: 10px;">SABOR</th>
+                                <th style="padding: 10px;">AGUA</th>
+                                <th style="padding: 10px;">LECHE</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr style="border-bottom: 1px solid rgba(0,0,0,0.1);">
+                                <td style="padding: 8px;">Mora, Mango, Maracuyá, Fresa, Lulo, Guanábana</td>
+                                <td style="padding: 8px;">$6.500</td>
+                                <td style="padding: 8px;">$8.000</td>
+                            </tr>
+                            <tr style="border-bottom: 1px solid rgba(0,0,0,0.1);">
+                                <td style="padding: 8px;">Frutos Amarillos/Rojos, Maracumango, Limonada, Limón Coco</td>
+                                <td style="padding: 8px;">$7.500</td>
+                                <td style="padding: 8px;">$9.000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
             <section class="galeria-platos">
-                <h2 class="etiqueta-negra">IMAGEN DE NUESTROS PLATOS</h2>
+                <h2 class="etiqueta-negra">GALERÍA</h2>
                 <div class="grid-imagenes">
-                    <div class="foto-plato">
-                        <img src="img/burritos.jpg" alt="Burritos Especiales">
-                    </div>
-                    <div class="foto-plato">
-                        <img src="img/nachos.jpg" alt="Nachos Especiales">
-                    </div>
-                    <div class="foto-plato">
-                        <img src="img/rollos.jpg" alt="Rollos de Churrasco">
-                    </div>
+                    <div class="foto-plato"><img src="img/burritos.jpg" alt="Burritos"></div>
+                    <div class="foto-plato"><img src="img/nachos.jpg" alt="Nachos"></div>
+                    <div class="foto-plato"><img src="img/rollos.jpg" alt="Rollos"></div>
                 </div>
             </section>
 
