--- a/index.html
+++ b/index.html
@@ -128,43 +128,40 @@
                         <p>Bebida 250ml + Papa a tu gusto.</p>
                     </div>
 
-                    <section class="categoria">
-                        <h2 class="etiqueta-negra">BEBIDAS FRÍAS</h2>
-                        <div class="item-simple"><span>GASEOSA 250ML / 400ML</span><b>$3k / $4k</b></div>
-                        <div class="item-simple"><span>CERVEZA NACIONAL / CORONITA</span><b>$6k / $5k</b></div>
-                        <div class="item-simple"><span>STELLA / CORONA / COLA&POLA</span><b>$7k / $7k / $5k</b></div>
-                        <div class="item-simple"><span>AGUA CON/SIN GAS</span><b>$3.5 / $3.0</b></div>
-                        <div class="item-simple"><span>MICHELADA / SODA LIMÓN</span><b>$8k / $6k</b></div>
-                    </section>
+                   <section class="categoria">
+    <h2 class="etiqueta-negra">BEBIDAS FRÍAS</h2>
+    <div class="item-simple"><span>GASEOSA 250ML</span><b>$3.000</b></div>
+    <div class="item-simple"><span>GASEOSA 400ML</span><b>$4.000</b></div>
+    <div class="item-simple"><span>CERVEZA NACIONAL</span><b>$6.000</b></div>
+    <div class="item-simple"><span>CERVEZA CORONA</span><b>$7.000</b></div>
+    <div class="item-simple"><span>CERVEZA CORONITA</span><b>$5.000</b></div>
+    <div class="item-simple"><span>COLA & POLA</span><b>$5.000</b></div>
+    <div class="item-simple"><span>STELLA ARTOIS</span><b>$7.000</b></div>
+    <div class="item-simple"><span>AGUA CON GAS</span><b>$3.500</b></div>
+    <div class="item-simple"><span>AGUA SIN GAS</span><b>$3.000</b></div>
+    <div class="item-simple"><span>MICHELADA</span><b>$8.000</b></div>
+    <div class="item-simple"><span>SODA LIMÓN Y HIELO</span><b>$6.000</b></div>
+</section>
                 </div>
             </div>
 
-            <section class="categoria" style="margin-top: 40px;">
-                <h2 class="etiqueta-negra">JUGOS NATURALES</h2>
-                <div style="overflow-x: auto;">
-                    <table style="width: 100%; border-collapse: collapse; font-family: var(--fuente-vintage); font-size: 0.9rem; text-align: left;">
-                        <thead>
-                            <tr style="border-bottom: 2px solid var(--negro-solido);">
-                                <th style="padding: 10px;">SABOR</th>
-                                <th style="padding: 10px;">AGUA</th>
-                                <th style="padding: 10px;">LECHE</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr style="border-bottom: 1px solid rgba(0,0,0,0.1);">
-                                <td style="padding: 8px;">Mora, Mango, Maracuyá, Fresa, Lulo, Guanábana</td>
-                                <td style="padding: 8px;">$6.500</td>
-                                <td style="padding: 8px;">$8.000</td>
-                            </tr>
-                            <tr style="border-bottom: 1px solid rgba(0,0,0,0.1);">
-                                <td style="padding: 8px;">Frutos Amarillos/Rojos, Maracumango, Limonada, Limón Coco</td>
-                                <td style="padding: 8px;">$7.500</td>
-                                <td style="padding: 8px;">$9.000</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </section>
+            <section class="categoria">
+    <h2 class="etiqueta-negra">JUGOS NATURALES</h2>
+    
+    <article class="plato">
+        <div class="header-item"><span>FRUTAS TRADICIONALES</span></div>
+        <p class="descripcion" style="font-style: normal; color: #000;">Mora, Mango, Maracuyá, Fresa, Lulo, Guanábana</p>
+        <div class="item-simple"><span>En Agua</span><b>$6.500</b></div>
+        <div class="item-simple"><span>En Leche</span><b>$8.000</b></div>
+    </article>
+
+    <article class="plato" style="margin-top: 20px;">
+        <div class="header-item"><span>ESPECIALIDADES</span></div>
+        <p class="descripcion" style="font-style: normal; color: #000;">Frutos Amarillos, Frutos Rojos, Maracumango, Limonada Coco, Limonada Natural</p>
+        <div class="item-simple"><span>En Agua</span><b>$7.500</b></div>
+        <div class="item-simple"><span>En Leche</span><b>$9.000</b></div>
+    </article>
+</section>
 
             <section class="galeria-platos">
                 <h2 class="etiqueta-negra">GALERÍA</h2>
@@ -184,3 +181,4 @@
 
 </body>
 </html>
+
