--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>POLLO SESAMO</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">125g pollo, queso doble crema, tocinitela y vegetales.</p>
+                            <p class="descripcion">125g pollo, queso doble crema, tocineta y vegetales.</p>
                         </article>
                         <article class="plato">
-                            <div class="header-item"><span>SESAMO (Doble)</span><span class="puntos"></span><span class="precio">$24.000</span></div>
-                            <p class="descripcion">Res (100g), Pollo (120g), chorizo santarrosano, cheddar y doble crema.</p>
+                            <div class="header-item"><span>SESAMO </span><span class="puntos"></span><span class="precio">$24.000</span></div>
+                            <p class="descripcion">Doble carne de res (100g), cerdo (100g) Pollo (120g), chorizo santarrosano, cheddar y doble crema.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>SESAMO MIX</span><span class="puntos"></span><span class="precio">$22.000</span></div>
-                            <p class="descripcion">Res (100g), Cerdo (100g), queso cheddar, tocinitela y vegetales.</p>
+                            <p class="descripcion">Res (100g), Cerdo (100g), queso cheddar, tocineta y vegetales.</p>
                         </article>
                     </section>
 
@@ -203,4 +203,5 @@
 
 </body>
 </html>
+
 
