Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                         <h2 class="etiqueta-negra">POLLO</h2>
                         <article class="plato">
                             <div class="header-item"><span>PECHUGA RANCH</span><span class="puntos"></span><span class="precio">$23.000</span></div>
-                            <p class="descripcion">250 grs de pechuga con tocinetas, queso, ensalada, papa francesa y maíz dulce.</p>
+                            <p class="descripcion">Corte de 250 grs. de pechuga con tocineta y queso, acompañado de ensalada, papa francesa y maíz dulce.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>PECHUGA A LA PLANCHA</span><span class="puntos"></span><span class="precio">$21.000</span></div>
-                            <p class="descripcion">250 grs de pechuga asada a la plancha, ensalada y papa francesa.</p>
+                            <p class="descripcion">Corte de 250 grs. de pechuga asada a la plancha acompañado de ensalada y papa francesa.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>PECHUGA HAWAIIANA</span><span class="puntos"></span><span class="precio">$23.000</span></div>
-                            <p class="descripcion">250 grs de pechuga con tocinetas, queso y piña, ensalada y papa francesa.</p>
+                            <p class="descripcion">Corte de 250 grs. de pechuga con tocineta, queso y piña acompañado de ensalada y papa francesa.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>ALAS BBQ</span><span class="puntos"></span><span class="precio">$20.000</span></div>
-                            <p class="descripcion">Cinco alas sazonadas en salsa BBQ, ensalada y papa francesa.</p>
+                            <p class="descripcion">Cinco alas de pollo sazonadas en salsa BBQ, acompañadas de ensalada y papa francesa.</p>
                         </article>
                     </section>
 
@@ -85,15 +85,15 @@
                         <h2 class="etiqueta-negra">CARNES</h2>
                         <article class="plato">
                             <div class="header-item"><span>CHURRASCO</span><span class="puntos"></span><span class="precio">$32.000</span></div>
-                            <p class="descripcion">250 grs de carne de res magra asada a la plancha, ensalada y papa.</p>
+                            <p class="descripcion">Corte de 250 grs. de carne de res magra, jugosa asada a la plancha, acompañada de ensalada y papa.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>ROLLS DE CHURRASCO</span><span class="puntos"></span><span class="precio">$32.000</span></div>
-                            <p class="descripcion">300 grs rellenos de tocinito y queso parmesano, ensalada y papa.</p>
+                            <p class="descripcion">Rolls de churrasco de 300 grs, rellenos de tocineta y queso parmesano, acompañados de ensalada y papa.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>BIFF CHORIZO</span><span class="puntos"></span><span class="precio">$31.000</span></div>
-                            <p class="descripcion">250 grs de carne de res magra, jugosa asada a la plancha, ensalada y papa.</p>
+                            <p class="descripcion">Corte de 250 grs. de carne de res magra, jugosa, asada a la plancha, acompañada de ensalada y papa.</p>
                         </article>
                     </section>
 
@@ -110,19 +110,19 @@
                         <h2 class="etiqueta-negra">HAMBURGUESAS</h2>
                         <article class="plato">
                             <div class="header-item"><span>SENCILLA</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">100g res, pan artesanal, queso cheddar, cebolla caramelizada y vegetales.</p>
+                            <p class="descripcion">Hamburguesa de 100 grs. de pura carne de res, acompañada de pan artesanal, queso cheddar, lechuga, cebolla caramelizada y tomate.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>POLLO SESAMO</span><span class="puntos"></span><span class="precio">$16.000</span></div>
-                            <p class="descripcion">125g pollo, queso doble crema, tocineta y vegetales.</p>
+                            <p class="descripcion">Hamburguesa de 125 grs. de pura carne de pollo, acompañada de pan artesanal, queso doble crema, tocineta, lechuga, cebolla caramelizada y tomate.</p>
                         </article>
                         <article class="plato">
-                            <div class="header-item"><span>SESAMO </span><span class="puntos"></span><span class="precio">$24.000</span></div>
-                            <p class="descripcion">Doble carne de res (100g), cerdo (100g) Pollo (120g), chorizo santarrosano, cheddar y doble crema.</p>
+                            <div class="header-item"><span>SESAMO</span><span class="puntos"></span><span class="precio">$24.000</span></div>
+                            <p class="descripcion">Hamburguesa con 100 grs. de pura carne de res, 120 grs. de carne de pollo y chorizo santarrosano, acompañada de pan artesanal, queso cheddar, doble crema, tocineta, lechuga, cebolla caramelizada y tomate.</p>
                         </article>
                         <article class="plato">
                             <div class="header-item"><span>SESAMO MIX</span><span class="puntos"></span><span class="precio">$22.000</span></div>
-                            <p class="descripcion">Res (100g), Cerdo (100g), queso cheddar, tocineta y vegetales.</p>
+                            <p class="descripcion">Hamburguesa doble carne de 100 grs. de pura carne de res y 100 grs. carne de cerdo, acompañada de pan artesanal, queso cheddar, tocineta, lechuga, cebolla caramelizada y tomate.</p>
                         </article>
                     </section>
 
@@ -203,5 +203,3 @@
 
 </body>
 </html>
-
-
