Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
                     <section class="categoria">
                         <h2 class="etiqueta-negra">PORCIONES</h2>
                         <div class="item-simple"><span>CARNE HAMBURGUESA</span><b>$7.000</b></div>
-                        <div class="item-simple"><span>PAPA FRANCESA / CRIOLLA</span><b>$5.000</b></div>
-                        <div class="item-simple"><span>ARROZ / PATACONES</span><b>$4.000</b></div>
+                        <div class="item-simple"><span>PAPA FRANCESA</span><b>$5.000</b></div>
+                        <div class="item-simple"><span>CRIOLLA</span><b>$5.000</b></div>
+                        <div class="item-simple"><span>ARROZ </span><b>$4.000</b></div>
+                        <div class="item-simple"><span>PATACONES</span><b>$4.000</b></div>
                     </section>
                 </div>
 
@@ -203,3 +205,4 @@
 
 </body>
 </html>
+
